# nekRS

./: .clang-format  .clang-tidy.in  .gitattributes  .gitignore  .gitmodules  .readthedocs.yaml  .travis.yml  .travis.yml-e  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  RELEASE.md  build.sh  environment-dev.yml  getdep  install_script.in.cmake  makenrs  mktar  nrsconfig  nrsconfig-polaris  todo
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml
backends/: gemv-backend-cuda.c  gemv-backend-hip.c
cmake/: FindFilesystem.cmake  adios.cmake  bench.cmake  cvode.cmake  elliptic.cmake  external_plugins.cmake  gslib.cmake  hypre.cmake  install_examples.cmake.in  install_kernels.cmake  maketar.cmake  mesh.cmake  nek5000.cmake  nekrs.cmake  nekrs.conf.in  occa.cmake  uninstall.cmake.in  utils.cmake
config/: bench.cmake  blaslapack.cmake  elliptic.cmake  examples_manifest.cmake.in  gslib.cmake  hypre.cmake  install_examples.cmake  install_examples.cmake.in  libnek5000.cmake  libp.cmake  libp_sources.cmake  libparanumal.cmake  maketar.cmake  mesh.cmake  nek5000.cmake  nek5000_deps.cmake  nekrs.bashrc.in  nekrs.conf.in  nrs.cmake  occa.cmake  parAlmond.cmake  paranumal.cmake  run_gs_install.sh  run_libp_gs_install.sh  run_nekconfig.sh  sensei.cmake  suitesparse.cmake  uninstall.cmake.in  utils.cmake
doc/: Makefile  README.md  conf.py  envHelp.txt  parHelp.txt  requirements.txt
doc/source/: Doxyfile  conf.py  detailed_usage.rst  glossary.rst  index.rst  input_files.rst  other_resources.rst  quickstart.rst  references.rst  theory.rst
example/: case01.co2  conReader.h  example.c  quality.h
examples/: CMakeLists.txt  README.md  conReader.h  gencon.c  partition.c
examples/channel/: CASEDATA  casedata.h  channel.co2  channel.oudf  channel.par  channel.re2  channel.udf  channel.usr  ci.inc  input.box
examples/conj_ht/: ci.inc  conj_ht.co2  conj_ht.oudf  conj_ht.par  conj_ht.re2  conj_ht.udf  conj_ht.usr  conj_ht_ci.h
examples/double_shear/: double_shear.oudf  double_shear.par  double_shear.re2  double_shear.udf  double_shear.usr  input.box
examples/eddy/: eddy.box  eddy.co2  eddy.okl  eddy.oudf  eddy.par  eddy.re2  eddy.udf  eddy.usr  eddy_ci.h
examples/eddyNekNek/: ci.inc  eddy.udf  eddyNekNek.sess  eddyNekNekMv.sess  eddyNekNekNek.sess  eddyNekNekNekMv.sess  inside.oudf  inside.par  inside.udf  inside.usr  outside.par  outside.re2  outside.udf  outside.usr
examples/eddyNekNekMv/: eddyNekNekMv.sess  insidemv.par  insidemv.udf  outside.par  outside.udf  outside.usr
examples/eddyPeriodic/: eddy.box  eddy.co2  eddy.oudf  eddy.par  eddy.re2  eddy.udf  eddy.usr
examples/eddy_mv/: .state  casedata.h  ci.inc  eddy_mv.co2  eddy_mv.oudf  eddy_mv.par  eddy_mv.re2  eddy_mv.udf  eddy_mv.usr  input.box  result
examples/ethier/: CASEDATA  casedata.h  ci.inc  ethier.okl  ethier.oudf  ethier.par  ethier.supp  ethier.udf  ethier.usr  ethierScalar.par  ethier_ci.h  mv_ethier.par  parse_valgrind.py
examples/fdlf/: SIZE  fdlf.box  fdlf.oudf  fdlf.par  fdlf.re2  fdlf.udf  fdlf.usr
examples/gabls1/: CASEDATA  gabls.co2  gabls.oudf  gabls.par  gabls.re2  gabls.udf  gabls.usr  input.box
examples/gabls1-part/: README.md  casedata.h  gabls-part.oudf  gabls-part.par  gabls-part.udf  gabls-part.usr  visit-script.py
examples/hemi/: hemi.co2  hemi.oudf  hemi.par  hemi.udf  hemi.usr
examples/hemi-part/: hemi-part.par  hemi-part.re2  hemi-part.udf  hemi.udf
examples/hemi-part-host/: hemi-part.par  hemi-part.udf  hemi-part.usr
examples/hemi-part-usr/: hemi-part.udf  hemi-part.usr
examples/hit/: hit.par  hit.re2  hit.udf  input.box
examples/kershaw/: README.md  amgx.json  casedata.h  kershaw.box  kershaw.par  kershaw.re2  kershaw.udf  kershaw.usr
examples/ktauChannel/: channel.co2  channel.oudf  channel.par  channel.re2  channel.udf  channel.usr  ci.inc  input.box  r.fld
examples/lowMach/: CASEDATA  casedata.h  ci.inc  input.box  lowMach.co2  lowMach.oudf  lowMach.par  lowMach.re2  lowMach.udf  lowMach.usr  lowMach_ci.h
examples/mv_cyl/: .state  CASEDATA  casedata.h  ci.inc  input.box  mv_cyl.co2  mv_cyl.oudf  mv_cyl.par  mv_cyl.re2  mv_cyl.udf  mv_cyl.usr  mv_cyl_derived_bc.oudf  mv_cyl_derived_bc.par  mv_cyl_derived_bc.udf  nek5000-output  nekrs-output  output
examples/pb146/: analysis-block.py  analysis.py  pb.co2  pb.oudf  pb.par  pb.udf  pb.usr  pb.xml
examples/pb146-part/: casedata.h  pb-part.par  pb-part.udf
examples/pb146_ascent/: ascent_actions.yaml  do_nrsbmpi.sh  do_nrspre.sh  nekrsAscent.cpp  nekrsAscent.hpp  nrsqsub_frontier_hip  nrsqsub_frontier_openmp  nrsqsub_polaris  nrsqsub_polaris.buildonly  nrsqsub_polaris.fp32  pb.oudf  (+5 more)
git-hooks/: README.md  install-hooks  pre-commit  pre-commit-clang-format
scripts/: nrs-format  nrsLaunchHelper.sh  nrsbmpi  nrsman  nrsmpi  nrsnrsqsub_summit  nrspre  nrsqsub_aurora  nrsqsub_crusher  nrsqsub_frontier  nrsqsub_juwels-booster  nrsqsub_lassen  nrsqsub_perlmutter  nrsqsub_polaris  nrsqsub_slurm  nrsqsub_spock  nrsqsub_summit  nrsqsub_sunspot  nrsqsub_utils  nrsvis  uncrustify.cfg  uncrustify.sh  update3rdParty  updateNek
src/: .clang-tidy  bcMap.cpp  bcMap.hpp  cds.cpp  cds.h  cfl.cpp  configReader.cpp  configReader.hpp  dummy.f  environment.cpp  environment.hpp  filter.cpp  filterSetup.cpp  gemv-impl.c  gemv-log.c  genmap-algo.c  genmap-chelpers.c  genmap-comm.c  genmap-components.c  genmap-eigen.c  genmap-fiedler.c  genmap-fortran-name.h  genmap-gmsh.c  genmap-gmsh.h  genmap-gslib.h  genmap-handle.c  genmap-impl.h  genmap-io.c  genmap-io.h  genmap-lanczos.c  genmap-laplacian-weighted.c  genmap-laplacian.c  genmap-quality.c  genmap-rcb.c  genmap-rsb.c  genmap-statistics.c  genmap-types.h  genmap-vector.c  genmap.c  genmap.h  (+51 more)
src/udf/: CMakeLists.txt  ci.hpp  compileUDFKernels.cpp  udf.cpp  udf.hpp  udfHelper.hpp
tests/: comm_test.c  gs_test_gop_blocking.c  gs_test_gop_nonblocking.c  t100-local-sort.c  t120-parallel-sort.c  t200-laplacian.c  t200-parallel-sort.c  t210-levels.c  t220-interpolation.c  t230-flex-cg.c  t235-project-pf.c  t240-rqi.c  t300-load-balance.c
(+1927 files in other folders)
